# MicroOptimus

./: .gitignore  AERON_CLUSTER_ARCHITECTURE.md  BOOST_CIRCULAR_BUFFER_TEST_COMPLETE.md  CLAUDE.md  CLAUDE_MEMORY.md  CLION_TEST_GUIDE.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  DEMO_COMPLETE.md  FOLLY_MACOS_ISSUE.md  FOLLY_SPSC_TEST_COMPLETE.md  JAVA_CPP_SBE_INTEGRATION.md  MODULAR_REFACTORING_COMPLETE.md  README.md  SBE_QUICKSTART.md  SOR_IMPLEMENTATION_COMPLETE.md  SOR_PROJECT_SUMMARY.md  TESTS_QUICKSTART.md  UNIT_TEST_COMPLETION_SUMMARY.md  VWAP_ENHANCEMENT_COMPLETE.md  VWAP_QUICKSTART.md  build.gradle  build_all.sh  build_and_test_sor.sh  build_sor.sh  build_sor_modular.sh  build_sor_with_boost.sh  build_sor_with_folly.sh  demo_java_cpp_sbe.sh  gradle.properties  main.cpp  run_sbe_demo.sh  settings.gradle  setup_clion_test.sh  simple_sbe_test.sh  test_aeron_cluster.sh  test_java_cpp_sbe_integration.sh  test_vwap_enhancement.sh  validate_all_tests.sh  validate_sbe_fixes.sh  (+2 more)
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
algo/: build.gradle
algo/perf-reports/: e2e_algo_sor_latency_e2e_s1_steady.json  e2e_algo_sor_latency_e2e_s2_open_burst.json  e2e_algo_sor_latency_e2e_s3_thin_liquidity.json  e2e_algo_sor_latency_e2e_s4_large_parent.json  vwap_latency_algo_s1_steady.json  vwap_latency_algo_s2_open_burst.json  vwap_latency_algo_s3_thin_liquidity.json  vwap_latency_algo_s4_large_parent.json
app/: build.gradle
app/src/main/java/com/microoptimus/app/: MicroOptimusApp.java
app/src/main/java/com/microoptimus/test/: FullIntegrationTest.java  MinimalClusterTest.java  SimpleAeronClusterTest.java
common/: build.gradle
common/src/main/sbe/execution/: ExecutionMessage.xml
common/src/main/sbe/marketdata/: MarketDataMessage.xml
common/src/main/sbe/orders/: OrderRequestMessage.xml
config/: example.conf
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/algo/: CMakeLists.txt
cpp/algo/bench/: vwap_latency.cpp
cpp/algo/include/microoptimus/algo/: algo_order.hpp  vwap_algorithm.hpp
cpp/algo/perf-reports/: cpp_vwap_latency_algo_s1_steady.json
cpp/algo/src/: vwap_algorithm.cpp
cpp/algo/tests/: vwap_algorithm_test.cpp
cpp/common/: CMakeLists.txt
cpp/common/include/microoptimus/common/: benchmark_utils.hpp  types.hpp
cpp/include/: MatchEngine.hpp  Order.hpp  OrderBook.hpp  Trade.hpp
cpp/matchengine/: MatchEngine.cpp
cpp/orderbook/: OrderBook.cpp
cpp/sor/: CMakeLists.txt
cpp/sor/bench/: e2e_algo_sor_latency.cpp  router_latency.cpp
cpp/sor/include/microoptimus/mvp/: smart_order_router.hpp  sor_types.hpp
cpp/sor/perf-reports/: cpp_e2e_algo_sor_latency_e2e_s1_steady.json  cpp_router_latency_sor_s1_steady.json
cpp/sor/src/: smart_order_router.cpp
cpp/sor/tests/: router_mvp_test.cpp
docs/: ARCHITECTURE.md  BUILD.md
gateway/: build.gradle
gateway/src/main/java/com/microoptimus/gateway/: CMEMarketDataGateway.java
internaliser/: build.gradle
internaliser/src/main/java/com/microoptimus/internaliser/: ExecutionReport.java  ExecutionReportPool.java  InternalMatchingEngine.java  InternalOrderBook.java  InternaliserService.java  InternaliserStats.java  (+4 more)
java/: pom.xml
java/src/main/java/com/microoptimus/: Main.java
javamvp/: README.md  build.gradle  settings.gradle
javamvp/algo/: build.gradle
javamvp/algo/perf-reports/: java_aeron_vwap_latency_algo_s1_steady.json
javamvp/common/: build.gradle
javamvp/sor/: build.gradle
javamvp/sor/perf-reports/: java_aeron_e2e_algo_sor_latency_e2e_s1_steady.json  java_aeron_e2e_algo_sor_latency_e2e_s1_steady_batch_bench.json  java_aeron_router_latency_sor_s1_steady.json
liquidator/: README_SOR.md  README_SOR_INTEGRATION.md  build.gradle
liquidator/perf-reports/: router_latency_sor_s1_steady.json  router_latency_sor_s2_open_burst.json  router_latency_sor_s3_thin_liquidity.json  router_latency_sor_s4_large_parent_children.json
liquidator/src/main/cpp/: CMakeLists.txt  CMakeLists_modular.txt  CMakeLists_simple.txt
liquidator/src/main/cpp/sor/: README_REFACTORED.md  smart_order_router.cpp  smart_order_router_simple.cpp
liquidator/src/main/cpp/sor/include/microoptimus/sor/: jni_wrapper.hpp  order_splitter.hpp  risk_manager.hpp  routing_decision.hpp  smart_order_router.hpp  types.hpp  venue_config.hpp  venue_scorer.hpp
liquidator/src/main/cpp/sor/src/: jni_wrapper.cpp  order_splitter.cpp  risk_manager.cpp  smart_order_router.cpp  venue_scorer.cpp
liquidator/src/main/cpp/sor/tests/: README_TESTS.md  test_order_splitter.cpp  test_risk_manager.cpp  test_venue_scorer.cpp
liquidator/src/main/cpp/test/: README_BOOST_CIRCULAR_BUFFER.md  README_FOLLY_SPSC.md  performance_test.cpp  sbe_shared_memory_reader_test.cpp  test_boost_circular_buffer.cpp  test_folly_spsc_queue.cpp
osm/: README.md  build.gradle
python/: demo_market_maker.py  requirements.txt
python/marketmaker/: __init__.py  market_maker.py
recombinor/: build.gradle
rust/: .gitignore  CLAUDE.md  Cargo.toml  README.md
rust/algo/: .gitignore  Cargo.toml  README.md
rust/algo/benches/: vwap_latency.rs
rust/algo/perf-reports/: rust_aeron_vwap_latency_algo_s1_steady.json  vwap_latency_algo_s1_steady.json
rust/algo/src/: algo_order.rs  algo_service.rs  cluster_service.rs  engine.rs  lib.rs  slice.rs  vwap.rs
rust/algo/tests/: vwap_correctness.rs
rust/common/: Cargo.toml
rust/common/src/: cluster.rs  ipc.rs  lib.rs  messages.rs  pool.rs  sbe.rs  shm.rs  types.rs  wire.rs
rust/hello_world/: Cargo.toml
rust/signal/: Cargo.toml
rust/signal/src/: lib.rs  signal_service.rs  vwap_params.rs
rust/sor/: Cargo.toml  README.md
rust/sor/benches/: e2e_algo_sor_latency.rs  router_latency.rs
rust/sor/perf-reports/: e2e_algo_sor_latency_e2e_s1_steady.json  router_latency_sor_s1_steady.json  rust_aeron_e2e_algo_sor_latency_e2e_s1_steady.json  rust_aeron_router_latency_sor_s1_steady.json
rust/sor/src/: cluster_service.rs  lib.rs  order_request.rs  risk.rs  router.rs  scorer.rs  sor_service.rs  splitter.rs  venue.rs
rust/sor/tests/: e2e_cluster_flow_test.rs  router_correctness.rs
signal/: build.gradle
(+146 files in other folders)
