[package]
name = "algo"
version.workspace = true
edition.workspace = true

[features]
aeron-integration = ["common/aeron"]

[dependencies]
common = { path = "../common" }

[dev-dependencies]
criterion = "0.5"
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "vwap_latency"
harness = false
required-features = ["aeron-integration"]

